ai 이미지 생성시 조회 polling 으로 변경